First version of deeponet wrapper script. Pickle errors all over

--- a/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
+++ b/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
@@ -34,14 +34,14 @@
     "del data_matrix\n",
     "\n",
     "U1_branch = data[:,0:-1,0:200]\n",
-    "U1_branch = np.concat([U1_branch,eps], axis = -1)\n",
+    "U1_branch = np.concatenate([U1_branch,eps], axis = -1)\n",
     "U1_branch = np.reshape(U1_branch, [U1_branch.shape[0]*U1_branch.shape[1],201])\n",
     "\n",
     "V1_out = data[:,1::,0:200]\n",
     "V1_out = np.reshape(V1_out, [V1_out.shape[0]*V1_out.shape[1],200])\n",
     "\n",
     "U2_branch = data[:,0:-1,200:400]\n",
-    "U2_branch = np.concat([U2_branch,eps], axis = -1)\n",
+    "U2_branch = np.concatenate([U2_branch,eps], axis = -1)\n",
     "U2_branch = np.reshape(U2_branch, [U2_branch.shape[0]*U2_branch.shape[1],201])\n",
     "\n",
     "V2_out = data[:,1::,200:400]\n",
