--- a/FitzHugh-Nagumo/deeponet_multiparameter/deeponet.ipynb
+++ b/FitzHugh-Nagumo/deeponet_multiparameter/deeponet.ipynb
@@ -38,7 +38,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import metrics\n",
-    "from flax import linen as nn\n",
+    "#from flax import linen as nn\n",
     "import sklearn.metrics\n",
     "\n",
     "import argparse\n",
