--- a/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
+++ b/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,18 @@
     "data_matrix = []\n",
     "\n",
     "for filename in sorted(os.listdir(directory)):\n",
-    "    if filename.startswith(\"FHN_Evolution_eps=\") and filename.endswith(\".npy\"):\n",
+    "    if filename.startswith(\"FHN_BF_Evolution_eps=\") and filename.endswith(\".npy\"):\n",
     "        file_path = os.path.join(directory, filename)\n",
     "        data = np.load(file_path)\n",
     "        data_matrix.append(data)\n",
-    "\n",
-    "eps = np.array([-0.01,0.0,0.005,0.01,0.013,0.015,0.017,0.02,0.03,0.05,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,0.92]).reshape(-1,1)\n",
-    "eps = np.tile(eps,[1,20]).reshape([400,1,1])\n",
-    "eps = np.tile(eps,[1,448,1])\n",
+    "        \n",
+    "eps = np.array([0.00176,0.010,0.0225,0.034,0.046,0.056,0.066,0.077,0.088,0.099,0.1,0.113,0.130,0.152,0.181,0.220,0.274,0.354,0.475,0.654]).reshape(-1,1)\n",
+    "eps = np.tile(eps,[1,data.shape[0]])\n",
+    "eps = eps.reshape([eps.shape[0]*eps.shape[1],1,1])\n",
+    "eps = np.tile(eps,[1,data.shape[1],1])\n",
     "\n",
     "data_matrix = np.array(data_matrix)\n",
+    "\n",
     "del data\n",
     "data = np.zeros([data_matrix.shape[0]*data_matrix.shape[1],data_matrix.shape[-2],data_matrix.shape[-1]])\n",
     "\n",
@@ -34,22 +36,22 @@
     "del data_matrix\n",
     "\n",
     "U1_branch = data[:,0:-1,0:200]\n",
-    "U1_branch = np.concatenate([U1_branch,eps], axis = -1)\n",
+    "U1_branch = np.concatenate([U1_branch,eps[:,0:-1,:]], axis = -1)\n",
     "U1_branch = np.reshape(U1_branch, [U1_branch.shape[0]*U1_branch.shape[1],201])\n",
     "\n",
     "V1_out = data[:,1::,0:200]\n",
     "V1_out = np.reshape(V1_out, [V1_out.shape[0]*V1_out.shape[1],200])\n",
     "\n",
     "U2_branch = data[:,0:-1,200:400]\n",
-    "U2_branch = np.concatenate([U2_branch,eps], axis = -1)\n",
+    "U2_branch = np.concatenate([U2_branch,eps[:,0:-1,:]], axis = -1)\n",
     "U2_branch = np.reshape(U2_branch, [U2_branch.shape[0]*U2_branch.shape[1],201])\n",
     "\n",
     "V2_out = data[:,1::,200:400]\n",
     "V2_out = np.reshape(V2_out, [V2_out.shape[0]*V2_out.shape[1],200])\n",
     "\n",
     "index = np.random.permutation(U1_branch.shape[0])\n",
-    "num_train = 174200\n",
-    "num_test = 5000\n",
+    "num_train = 18000\n",
+    "num_test = 1200\n",
     "index_train = index[0:num_train]\n",
     "index_test = index[-num_test:]\n",
     "\n",
@@ -71,8 +73,15 @@
     "             'U1_test_branch': U1_test_branch, 'U2_test_branch': U2_test_branch,\\\n",
     "             'V1_test_out': V1_test_out, 'V2_test_out': V2_test_out, 'Ytrain_trunk': grid}\n",
     "\n",
-    "io.savemat('./data_FHN.mat', save_dict)"
+    "io.savemat('./data_FHN_BF.mat', save_dict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
