Updated the preprocessing file

--- a/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
+++ b/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,24 +10,45 @@
     "import numpy as np\n",
     "import sys\n",
     "import scipy.io as io\n",
+    "import re \n",
     "\n",
     "directory = \"./\"\n",
     "data_matrix = []\n",
+    "eps_values = []\n",
+    "\n",
+    "\n",
+    "def convert_filename_to_float(filename):\n",
+    "    # Extract the numerical part after 'eps='\n",
+    "    match = re.search(r'eps=([-+]?\\d*p\\d+)', filename)\n",
+    "    if match:\n",
+    "        # Replace 'p' with '.' \n",
+    "        numeric_str = match.group(1).replace('p', '.')\n",
+    "        return float(numeric_str)\n",
+    "    return None    \n",
     "\n",
     "for filename in sorted(os.listdir(directory)):\n",
     "    if filename.startswith(\"FHN_BF_Evolution_eps=\") and filename.endswith(\".npy\"):\n",
     "        file_path = os.path.join(directory, filename)\n",
     "        data = np.load(file_path)\n",
     "        data_matrix.append(data)\n",
-    "        \n",
-    "eps = np.array([0.00176,0.010,0.0225,0.034,0.046,0.056,0.066,0.077,0.088,0.099,0.1,0.113,0.130,0.152,0.181,0.220,0.274,0.354,0.475,0.654]).reshape(-1,1)\n",
-    "eps = np.tile(eps,[1,data.shape[0]])\n",
-    "eps = eps.reshape([eps.shape[0]*eps.shape[1],1,1])\n",
-    "eps = np.tile(eps,[1,data.shape[1],1])\n",
     "\n",
     "data_matrix = np.array(data_matrix)\n",
     "\n",
+    "for filename in sorted(os.listdir(directory)):\n",
+    "    if filename.endswith('.npy') and filename.startswith('FHN_BF_Evolution_eps='):\n",
+    "        # Convert filename to float\n",
+    "        value = convert_filename_to_float(filename)\n",
+    "        if value is not None:\n",
+    "            eps_values.append(value)\n",
+    "            #print(f\"{filename} -> {value}\")\n",
+    "    \n",
+    "eps = np.array(eps_values).reshape(-1,1)\n",
+    "eps = np.tile(eps,[1,data.shape[0]])\n",
+    "eps = eps.reshape([eps.shape[0]*eps.shape[1],1,1])\n",
+    "eps = np.tile(eps,[1,data.shape[1]-1,1])\n",
+    "\n",
     "del data\n",
+    "\n",
     "data = np.zeros([data_matrix.shape[0]*data_matrix.shape[1],data_matrix.shape[-2],data_matrix.shape[-1]])\n",
     "\n",
     "for iBranch in range(data_matrix.shape[0]):\n",
@@ -36,14 +57,14 @@
     "del data_matrix\n",
     "\n",
     "U1_branch = data[:,0:-1,0:200]\n",
-    "U1_branch = np.concatenate([U1_branch,eps[:,0:-1,:]], axis = -1)\n",
+    "U1_branch = np.concatenate([U1_branch,eps], axis = -1)\n",
     "U1_branch = np.reshape(U1_branch, [U1_branch.shape[0]*U1_branch.shape[1],201])\n",
     "\n",
     "V1_out = data[:,1::,0:200]\n",
     "V1_out = np.reshape(V1_out, [V1_out.shape[0]*V1_out.shape[1],200])\n",
     "\n",
     "U2_branch = data[:,0:-1,200:400]\n",
-    "U2_branch = np.concatenate([U2_branch,eps[:,0:-1,:]], axis = -1)\n",
+    "U2_branch = np.concatenate([U2_branch,eps], axis = -1)\n",
     "U2_branch = np.reshape(U2_branch, [U2_branch.shape[0]*U2_branch.shape[1],201])\n",
     "\n",
     "V2_out = data[:,1::,200:400]\n",
