--- a/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
+++ b/FitzHugh-Nagumo/data/multiparameter/preprocessing.ipynb
@@ -2,9 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FHN_BF_Evolution_eps=-0p013995135419142527.npy -> -0.013995135419142527\n",
+      "FHN_BF_Evolution_eps=0p010870213896362666.npy -> 0.010870213896362666\n",
+      "FHN_BF_Evolution_eps=0p026688145853665232.npy -> 0.026688145853665232\n",
+      "FHN_BF_Evolution_eps=0p0426741178112812.npy -> 0.0426741178112812\n",
+      "FHN_BF_Evolution_eps=0p056789653766169616.npy -> 0.056789653766169616\n",
+      "FHN_BF_Evolution_eps=0p07032192346996836.npy -> 0.07032192346996836\n",
+      "FHN_BF_Evolution_eps=0p08458269206396306.npy -> 0.08458269206396306\n",
+      "FHN_BF_Evolution_eps=0p09998733340349023.npy -> 0.09998733340349023\n",
+      "FHN_BF_Evolution_eps=0p1000127069381065.npy -> 0.1000127069381065\n",
+      "FHN_BF_Evolution_eps=0p11886837858292669.npy -> 0.11886837858292669\n",
+      "FHN_BF_Evolution_eps=0p1450741900196357.npy -> 0.1450741900196357\n",
+      "FHN_BF_Evolution_eps=0p1817632192302204.npy -> 0.1817632192302204\n",
+      "FHN_BF_Evolution_eps=0p23614140438072379.npy -> 0.23614140438072379\n",
+      "FHN_BF_Evolution_eps=0p3243464256683595.npy -> 0.3243464256683595\n",
+      "FHN_BF_Evolution_eps=0p4767845745268973.npy -> 0.4767845745268973\n",
+      "FHN_BF_Evolution_eps=0p723209058490691.npy -> 0.723209058490691\n",
+      "FHN_BF_Evolution_eps=0p7731902725652591.npy -> 0.7731902725652591\n",
+      "FHN_BF_Evolution_eps=0p9394652781212026.npy -> 0.9394652781212026\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/somdatta/envs/jaxenv/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -41,7 +83,7 @@
     "        if value is not None:\n",
     "            eps_values.append(value)\n",
     "            #print(f\"{filename} -> {value}\")\n",
-    "    \n",
+    "   \n",
     "eps = np.array(eps_values).reshape(-1,1)\n",
     "eps = np.tile(eps,[1,data.shape[0]])\n",
     "eps = eps.reshape([eps.shape[0]*eps.shape[1],1,1])\n",
